# PermitCheck

./: CHANGELOG.md  CONTRIBUTING.md  README.md  TEST_COVERAGE_SUMMARY.md  permitcheck.yaml  pyproject.toml
.github/workflows/: code-quality.yml  publish.yml  release.yml  tests.yml
docs/: CONTRIBUTING.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  adding-language-support.md  api-reference.md  architecture.md  ci-cd-integration.md  configuration.md  installation.md  output-formats.md  usage-guide.md
examples/: README.md  for_go.py  for_java.py  for_ruby.py
legallint/: lint.py
legallint/plugins/: for_npm.py
permitcheck/: __init__.py  exceptions.py  lint.py  plugin.py  utils.py
permitcheck/core/: __init__.py  cache.py  config.py  matcher.py  reporter.py  validator.py
permitcheck/license/: update.py
permitcheck/plugins/: for_npm.py  for_python.py
permitcheck/scripts/: legallint_tool.py  permitcheck_tool.py
tests/: test_config_plugin_coverage.py  test_core_reporter_formats.py  test_reporter_advanced.py  test_spdx_parser.py  test_utils_comprehensive.py
tests/core/: test_config_comprehensive.py  test_core_cache.py  test_core_config.py  test_core_matcher.py  test_core_reporter.py  test_core_validator.py
tests/integration/: test_integration.py
tests/license/: test_license.py  test_license_update.py
tests/plugins/: test_for_python_coverage.py  test_plugin_coverage.py  test_plugin_system.py  test_python_plugin_extended.py
tests/scripts/: test_cli.py
